[package]
name = "excel-merger"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.1", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.24.1"
calamine = "0.21.1"
rfd = "0.11.4"
anyhow = "1.0.75"
winapi = { version = "0.3.9", features = ["winuser", "windef", "shellapi", "impl-default"] }
chrono = "0.4"
regex = "1.5"
rust_xlsxwriter = "0.62.0"
